PERFECT Song Progress Bar (Volume Seekbar Next)

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@
 	--primary-black: #111111;
 	--primary-indigo: #3730a3;
 	--primary-violet: #845ef7;
+	--primary-grey:#6b7280;
 
 	--gradient: linear-gradient(
 		30deg,
