--- a/src/styles.css
+++ b/src/styles.css
@@ -245,3 +245,12 @@ input[type="range"]::-webkit-slider-thumb {
     border-radius: 30% 70% 70% 30% / 80% 29% 71% 70%;
     transition: all 0.2s ease-out;
 }
+.shaped--border__radius-2{
+    border-radius: 57% 42% 40% 100% / 50% 50% 50% 50%;
+    transition: all 0.2s ease-out;
+}
+
+
+.details--header__wrapper:hover .shaped--border__radius-2{
+    border-radius:  15%;
+}
