--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
 
 
 :root,:root::after,:root::before {
+	-webkit-tap-highlight-color: transparent;
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
